edit nav responsive

--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -570,6 +570,7 @@ div.shopping-cart {
     width: 100%;
     height: 100%;
     text-transform: uppercase;
+    font-weight: 400;
 }
 
 .checkbtn2 i { display: none;}
@@ -659,9 +660,10 @@ div.shopping-cart {
     .checkbtn {font-size: 17px;}
 }
 
-@media (max-width: 315px) {
+@media (max-width: 320px) {
+    section.header-center { height: 3.8rem;}
     .categorias-hidden {
-        top: 4rem;
+        top: 5rem;
         transition: all .5s;
     }
     .categorias-hidden label { height: 1.2rem;}
@@ -669,31 +671,25 @@ div.shopping-cart {
     .checkbtn2 { font-size: 13px; }
 }
 
+@media (max-width: 315px) {
+    .categorias-hidden {
+        top: 3.7rem;
+        transition: all .5s;
+    }
+
+}
+
 
 /* -------------------------------*/
 
 hr#divider-to-categories {
     width: 100%;
-    height: 4px;
+    height: 3px;
     background-color: #fad11b;
     border: none;
     margin: 0;
     padding: 0;
     top: 0px;
-}
-
-@media (max-width: 720px) {
-    hr#divider-to-categories {
-        height: 3px;
-        transition: .3s;
-    }
-}
-
-@media (max-width: 720px) {
-    hr#divider-to-categories {
-        height: 3px;
-        transition: .3s;
-    }
 }
 
 /*-----------------  Categorias:  -------------------*/
