--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -1000,7 +1000,151 @@ hr#divider-to-categories {
 
   /* ----------------- Super promoções ------------------*/
 
+  section.super-promotions-container {
+    width: 100%;
+}
+
 .cards-promotions-container {
+   background-color: #1a1a1a;
+   height: auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   /* overflow: hidden; */
+   margin: 1rem 0rem 1rem 0rem;
+   gap: 2rem;
+}
+
+.card-promotion {
+   background-color: #fff;
+   width: auto;
+   height: 27rem;
+   margin: 20px;
+   border-radius: 10px;
+   border: solid 3px rgb(202, 172, 37);
+}
+
+.card-promotion:hover {
+   border: solid 3px #189107;
+   transition: .2s;
+}
+
+.card-promotion > div {
+   margin: 10px;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   display: flex;
+   flex-direction: column;
+   gap: 3px;
+   position: relative;
+   flex-wrap: nowrap;
+
+}
+
+.promotions-img {
+    width:95%;
+    height: 30%; 
+}
+
+
+@media (max-width:1050px) {
+   .card-promotion {
+       width: 9rem;
+       height: 24rem;
+       transition: all .5s;
+   }
+   .title-card-promotion {
+       font-size: 10px; 
+   }    
+}
+
+@media (max-width:957px) {
+   .card-promotion {
+       width: 10rem;
+       height: 20rem;
+       margin: 15px;
+   }    
+}
+
+.title-card-promotion {
+   font-size: 12px; 
+   font-weight: bold;
+   cursor: default;
+}
+
+.price-card-promotions {cursor: default;}
+
+.oldPrice-card {
+   color: #9c2222be;
+   font-weight: bold;
+   font-size: 11px;
+   text-decoration: line-through;
+}
+
+.priceUpdate-card { font-size: 12px; }
+
+.currentPrice-card { font-size: 20px; font-weight: bold; }
+
+.buy-btn {
+   background-color: #189107;
+   border-radius: 20px;
+   width: 80%;
+   height: 25px;
+   line-height: 25px;
+   transition: .5s;
+   -webkit-transition: .5s;
+   -moz-transition: .5s;
+   text-decoration: none;
+   color: white;
+}
+
+.buy-btn:hover {
+   transform: scale(1.1);
+   -webkit-transform: scale(1.1);
+   -moz-transform: scale(1.1);
+} 
+
+.discount-card {
+   display: none;
+   gap: 2px;
+   background-color: #189107;
+   color: white;
+   font-weight: bold;
+   font-size: 11px;
+   width: 20%;
+   padding: 7px;
+   border-bottom-left-radius: 10px;
+   border-top-left-radius: 10px;
+   position: absolute;
+   right: -10px;
+   bottom: 4.5em;
+}
+
+.discount-card img {width: 13px;}
+
+.card-promotion div:hover > .discount-card {
+   display: flex;
+} 
+
+@media (max-width:700px) {
+
+   .card-promotion {
+       width: 10rem;
+       height: 15rem;
+       margin: 15px;
+   }
+   .currentPrice-card { font-size: 17px; }
+
+   .buy-btn {
+       width: 60%;
+       height: 22px;
+       line-height: 22px;
+       font-size: 13px;
+   }
+}
+
+/* .cards-promotions-container {
     margin: 35px 0px 20px 0px;
     padding: 0;
     width: 100%;
@@ -1023,9 +1167,7 @@ hr#divider-to-categories {
 
 .swiper-slide {
     text-align: center;
-    /* font-size: 18px; */
     background: #fff;
-    /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -1165,7 +1307,7 @@ hr#divider-to-categories {
     color: rgba(255, 255, 255, 0.377);
 }
 
-#btn-next-promotions:hover {color: #c2a420}
+#btn-next-promotions:hover {color: #c2a420} */
 
 
  /* ----------------- Jogos mais populares ------------------*/
@@ -1228,7 +1370,16 @@ hr#divider-to-categories {
     }
 }
 
- /* ----------------- Lançamentos ------------------*/
+@media (min-width: 1900px) {
+    .populares-grid-item img {
+        height: 12rem;
+        transition: all .5s;
+    }
+    .populares-grid-item p { font-size: 20px; transition: .5s; }
+
+}
+
+/* ----------------- Lançamentos ------------------*/
 
 .lancamentos {
     width: 100%;
@@ -1240,38 +1391,162 @@ hr#divider-to-categories {
 
 .banner-lancamento {
     margin: 35px 0px 35px 0px;
+    display: none;
+    width: 100%;
+    height: 100%;
     position: relative;
+}
+
+.banner-lancamento:target { display: block}
+
+.banner-lancamento div {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
 }
 
 .banner-lancamento img {
     width: 100%;
-    height: 40ch;
-}
-
-.banner-lancamento a {
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    font-weight: 300px;
-}
-
-.banner-lancamento span {
-    background: #189107;
-    width: 13%;
     height: auto;
+}
+
+.banner-lancamento a { text-decoration: none; color: white; }
+
+.banner-lancamento div a span  {
+    width: 13em;
+    height: 20px;
+    line-height: 23px;
+    font-size: 20px;
     padding: 15px;
     border-radius: 20px;
+    background: #189107;
     text-align: center;
     position: absolute;
-    bottom: 40px;
+    bottom: 30px;
     right: 50px;
     transition: all .7s;
+    white-space: nowrap;
 }
 
 .banner-lancamento span:hover {
     transform: scale(1.1);
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
+}
+
+.prev-wall {
+    background-color: transparent;
+    position: absolute;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    transition: all .5s;
+    margin-left: 20px;
+}
+
+.next-wall {
+    background-color: transparent;
+    position: absolute;
+    right: 0;
+    width: 60px;
+    height: 60px;
+    margin-right: 10px;
+    transition: all .5s;
+}
+
+.prev-wall:hover {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+}
+.next-wall:hover {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+}
+
+@media (min-width: 1900px) {
+    .banner-lancamento div a span {
+        width: 13em;
+        height: 30px;
+        line-height: 30px;
+        font-size: 35px;
+        padding: 25px;
+        border-radius: 30px; 
+        bottom: 50px;
+        right: 50px;  
+    }
+    .prev-wall { width: 90px; height: 90px; margin-left: 25px;}
+    .next-wall { width: 90px; height: 90px; margin-right: 5px; }
+}
+
+@media (max-width: 1150px) {
+    .banner-lancamento div a span {
+        width: 10em;
+        height: 18px;
+        line-height: 18px;
+        font-size: 17px;
+        padding: 13px;
+        border-radius: 15px; 
+        bottom: 25px;
+        right: 25px;  
+    }
+}
+
+@media (max-width: 970px) {
+    .banner-lancamento div a span {
+        height: 12px;
+        line-height: 12px;
+        font-size: 13px;
+        border-radius: 13px;   
+        bottom: 20px;
+        right: 20px
+    }
+}
+
+@media (max-width: 700px) {
+    .banner-lancamento { margin-top: 20px; transition: .5s;}
+    .banner-lancamento div a span {
+        width: 9em;
+        height: 12px;
+        font-size: 11px;
+        padding: 10px;
+    }
+    .prev-wall { width: 40px; height: 40px; margin-left: 10px;}
+    .next-wall {
+        width: 40px;
+        height: 40px; 
+        margin-right: 0px;
+    }
+}
+
+@media (max-width: 530px) {
+    .banner-lancamento div a span {
+        width: 9em;
+        height: 10px;
+        line-height: 10px;
+        font-size: 8px;
+        padding: 8px;
+        border-radius: 10px;
+        bottom: 15px;
+        right: 15px;
+    }
+}
+
+@media (max-width: 420px) {
+    .banner-lancamento div a span {
+        font-size: 7px;
+        padding: 4px;
+        border-radius: 5px;
+        bottom: 12px;
+        right: 12px;
+    }
+    .prev-wall { width: 20px; height: 20px; margin-left: 10px;}
+    .next-wall {
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+    }
 }
 
 /*-----------------------  Footer:  -------------------------*/
