--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -8,6 +8,7 @@ body {
     
 header { background-color:#1a1a1a; }
 
+/*----------------- HEADER -----------------------------------------------------------------------------------*/
 
 /*-----------------  Overheader:  -------------------*/
 section.overheader {
@@ -144,7 +145,7 @@ div.overheader-options { gap: 4em; }
 }
 
 
-/*-----------------  Header-center:  -------------------*/
+/*--------------------  Header-center:  ------------------------*/
 section.header-center { 
     display: flex;
     justify-content: space-between;
@@ -505,6 +506,8 @@ div.shopping-cart {
     .search input { font-size: 10px;}
 }
 
+/*------------ BTN p/ Categorias no responsivo --------------*/ 
+
 .checkbtn {
     font-size: 25px;
     color: #fff;
@@ -700,7 +703,8 @@ div.shopping-cart {
     div.shopping-cart img { height: 45px; transition: all .5s;}
 }
 
-/* -------------------------------*/
+/* -------------- line divisão -----------------*/
+
 hr#divider-to-categories {
     width: 100%;
     height: 3px;
@@ -711,7 +715,7 @@ hr#divider-to-categories {
     top: 0px;
 }
 
-/*-----------------  Categorias:  -------------------*/
+/*--------------------  Categorias:  ----------------------*/
 
 .nav-bar {
     margin: 0;
@@ -833,112 +837,142 @@ hr#divider-to-categories {
     }
 }
 
+/*--------------------- MAIN ----------------------------------------------------------------------------*/
 
 /*-------------  Carrossel de imagens:  -------------*/
 
-.container-carousel {
-    display: flex;
-    justify-content: center;
+section.container-carousel {
+    background: transparent;
     width: 100%;
+    height: auto;
+    position: relative;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
-.carousel {
-    width: 90rem;
-    height: 17rem;
+.slider-carousel {
+    width: 500%;
+    height: auto;
+    display: flex;
     overflow: hidden;
-    border-radius: 10px;
-    transition: all 0.4s;
-    margin: 3rem;
-    border: solid 1px #1a1a1ac5;
-    position: relative;
 }
 
-.slides {
-    /* width: 500rem; pra que?*/
-    display: flex;
-    position: relative;
+.slider-carousel input { display: none;}
+
+.slideCarousel {
+    width: 20%;
+    transition: .7s;
 }
 
-.slides a {cursor: initial;}
-
-.image img {
-    width: 90em;
-    height: 17em;
+.slideCarousel img {
+    width: 100%;
+    height: auto;
 }
 
-#atual {
-    transition: all 0.5s;
-}
-
-.btn {
-    display: flex;
+/* css for manual navigation */
+.navigation-manual-carousel, .navigation-auto {
     position: absolute;
-    top: 3.4em;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    font-size: 2.2em;
-    margin-top: -5px;
-    background: rgba(200, 200, 200, 0.521); 
-    width: 7px;
-    height: 8px;
-    transition: all 0.2s;
-}
-
-.btn:hover {
-    transform: scale(1.2);
-    color: #1a1a1a;
-    background: #e6cd5f; 
-}
-
-#back {
-    border-top-right-radius: 7px;
-    border-bottom-right-radius: 7px;
-}
-
-#next {
-    border-top-left-radius: 7px;
-    border-bottom-left-radius: 7px;
-    left: 39.6em;
-}
-
-.balls {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    /* width: 90rem; */
+    width: 100%;
     margin-top: 1em;
     margin-left: 1em;
+    display: flex;
+    justify-content: start;
 }
 
-.balls div {
-    transition: all 0.4s;
-    border: solid 3px #eee;
-    padding: 3px;
+.manual-btn, .navigation-auto div {
+    border: 3px solid white;
     border-radius: 50%;
-    margin-left: 8px;
     cursor: pointer;
+    transition: all .2s;
+    padding: 5px;
 }
 
-.balls div:hover {
-    background: #cfb852;
-    border: solid 3px #cfb852;
-    transform: scale(1.2);
+.manual-btn:not(:last-child), .navigation-auto div:not(.last-child) {
+    margin-right: 10px;
 }
 
-.imgAtual {
-    background: #eee;
-    transition: all 0.3s;
+.manual-btn:hover {
+    background: white;
 }
 
+#radio1-carousel:checked ~ .firstSlide {
+    margin-left: 0;
+}
 
-.teste-scroll {margin: 3rem; text-align: justify;}
+#radio2-carousel:checked ~ .firstSlide {
+    margin-left: -20%;
+}
 
+#radio3-carousel:checked ~ .firstSlide {
+    margin-left: -40%;
+}
 
- /* ----------------- titulo das sections ------------------*/
+#radio4-carousel:checked ~ .firstSlide {
+    margin-left: -60%;
+}
+
+#radio5-carousel:checked ~ .firstSlide {
+    margin-left: -80%;
+}
+
+/* css for automatic navigation */
+#radio1-carousel:checked ~ .navigation-auto .auto-btn1 {
+    background: rgb(226, 194, 14);
+}
+
+#radio2-carousel:checked ~ .navigation-auto .auto-btn2 {
+    background: rgb(226, 194, 14);
+}
+
+#radio3-carousel:checked ~ .navigation-auto .auto-btn3 {
+    background: rgb(226, 194, 14);
+}
+
+#radio4-carousel:checked ~ .navigation-auto .auto-btn4 {
+    background: rgb(226, 194, 14);
+}
+
+#radio5-carousel:checked ~ .navigation-auto .auto-btn5 {
+    background: rgb(226, 194, 14);
+}
+
+@media (max-width: 775px) {
+    section.container-carousel {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        transition: .5s ;
+    }
+    
+    .manual-btn, .navigation-auto div {
+        border: 2px solid white;
+        padding: 3px;
+        transition: all .5s;
+    }
+    
+    .manual-btn:not(:last-child), .navigation-auto div:not(.last-child) {
+        margin-right: 7px;
+        transition: .5s;
+    }
+}
+
+@media (max-width: 450px) {
+
+    .navigation-manual-carousel, .navigation-auto {
+        margin-top: 10px;
+        margin-left: 10px;
+    }    
+
+    .manual-btn, .navigation-auto div {
+        border: 1px solid white;
+        padding: 2px;
+    }
+    
+    .manual-btn:not(:last-child), .navigation-auto div:not(.last-child) {
+        margin-right: 5px;
+    }
+}
+
+ /* ----------------- Titulo das sections -------------------*/
 
  .title-sections {
     margin-left: 3rem;
@@ -997,8 +1031,7 @@ hr#divider-to-categories {
  }
 
 
-
-  /* ----------------- Super promoções ------------------*/
+  /* ------------------ section Super Promoções --------------------*/
 
   section.super-promotions-container {
     width: 100%;
@@ -1046,7 +1079,6 @@ hr#divider-to-categories {
     width:95%;
     height: 30%; 
 }
-
 
 @media (max-width:1050px) {
    .card-promotion {
@@ -1144,173 +1176,7 @@ hr#divider-to-categories {
    }
 }
 
-/* .cards-promotions-container {
-    margin: 35px 0px 20px 0px;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    background-color: #1a1a1a;
-    border-top: solid 5px #c2a420;
-    border-bottom: solid 5px #c2a420;
-    position: relative;
-}
-
-.swiper {
-    width: 91%;
-    height: auto;
-    margin: 20px;
-}
-
-.swiper-slide {
-    text-align: center;
-    background: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.card-promotion {
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: #eee;
-    border: solid 3px #c2a420;
-    border-radius: 10px;
-    position: relative;
-}
-
-.card-promotion:hover {
-    border: solid 3px #189107;
-    transition: .2s;
-}
-
-.promotions-img {
-    width: 96%;
-    height: 16em;
-    padding-top: 4px;
-}
-
-.swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-    padding-top: 4px;
-  }
-
-.title-card-promotion {
-    font-size: 14px;
-    text-align: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    cursor: default;
-    font-weight: bold;
-}
-
-.oldPrice-card {
-    color: #9c2222be;
-    font-weight: bold;
-    font-size: 11px;
-    text-decoration: line-through;
-}
-
-.price-card-promotions {cursor: default;}
-
-.priceUpdate-card {
-    font-size: 11px;
-}
-
-.currentPrice-card {
-    font-size: 21px;
-    font-weight: bold;
-    padding-bottom: 5px;
-}
-
-.buy-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #189107;
-    border: none;
-    border-radius: 20px;
-    width: 70%;
-    height: 28px;
-    transition: .5s;
-    -webkit-transition: .5s;
-    -moz-transition: .5s;
-    cursor: pointer;
-    text-decoration: none;
-    color: white;
-    font-size: 15px;
-    margin-bottom: 4px;
-    position: relative;
-}
-
-.buy-btn:hover {
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-}
-
-.discount-card {
-    display: none;
-    gap: 4px;
-    background-color: #189107;
-    color: white;
-    font-weight: bold;
-    font-size: 13px;
-    position: absolute;
-    width: 18%;
-    padding: 7px;
-    border-bottom-left-radius: 10px;
-    border-top-left-radius: 10px;
-    align-items: center;
-    justify-content:start;
-    right: 0;
-    bottom: 4.5em;
-}
-
-.discount-card img {width: 15px;}
-
-.card-promotion:hover > .discount-card {
-    display: flex;
-} 
-
-#btn-left-promotions {
-    position: absolute;
-    left: 20px;
-    color: rgba(255, 255, 255, 0.377);
-}
-
-#btn-left-promotions:hover {color: #c2a420}
-
-#btn-next-promotions {
-    position: absolute;
-    right: 20px;
-    color: rgba(255, 255, 255, 0.377);
-}
-
-#btn-next-promotions:hover {color: #c2a420} */
-
-
- /* ----------------- Jogos mais populares ------------------*/
+ /* ------------- section jogos Mais Populares ---------------*/
 
  .populares-grid-container {
     display: grid;
@@ -1379,7 +1245,7 @@ hr#divider-to-categories {
 
 }
 
-/* ----------------- Lançamentos ------------------*/
+/* ----------------- section Lançamentos ------------------*/
 
 .lancamentos {
     width: 100%;
@@ -1549,7 +1415,7 @@ hr#divider-to-categories {
     }
 }
 
-/*-----------------------  Footer:  -------------------------*/
+/*-------------------------  FOOTER  ---------------------------------------------------------------------------*/
 
 footer { background-color:  #1a1a1a; color: #eee; }
 
@@ -1858,7 +1724,7 @@ div.security {
     .security img { height: 20px;}
 }
 
- /*-----------------  Chat-container:  -------------------*/
+ /*------------------------  CHAT  ------------------------------------------------------------------------*/
 
 .chat-container{
     position: fixed;
@@ -1876,7 +1742,7 @@ div.security {
     color: black;
     /* font-weight: bold;  é necessario? o texto está numa strong */  
     border-radius: 14px;
-    width: 60px;  /* pra que?--------------- */
+    width: 60px;  /* pra que?------- */
     transition: all .3s;
     /* position: relative; */
     background: none;
@@ -1884,7 +1750,7 @@ div.security {
       
 .chat img {
     width: 60px;
-    margin-left: 5px;  /* pra que?--------------- */
+    margin-left: 5px;  /* pra que?------- */
 }
        
 .chat strong {
@@ -1900,7 +1766,7 @@ div.security {
     transition-delay: .2s;
     transition-timing-function: ease-out;  
     /* position: absolute; */
-    /* left: 100%;   pra que?--------------- */
+    /* left: 100%;   pra que?--------- */
     /* font-weight: bold;  é necessario? o texto está numa strong */
     /* padding-left: 10px; */        
 }
